# vpipe

./: .editorconfig  .gitignore  .hlint.yaml  CHANGELOG.md  README.md  cabal.project  fourmolu.yaml
.github/workflows/: ci.yml  nightly.yml  release-candidate.yml
docs/: announcement.md  diagnostic-review.md  release-checklist.md
docs/decisions/: 0001-descriptor-environment-accessors.md  0002-expression-stablename-reification.md  0003-resource-capability-deferrals.md  0004-format-extension-scope.md  0006-shader-interface-scope.md  0007-capability-module-imports.md
examples/: CHANGELOG.md  LICENSE  vpipe-examples.cabal
examples/app/cube/: Main.hs
examples/app/headless/: Main.hs
examples/app/mandelbrot/: Main.hs
examples/app/offscreen/: Main.hs
examples/app/particles/: Main.hs
examples/app/plasma/: Main.hs
examples/app/regen-goldens/: Main.hs
examples/app/rings/: Main.hs
examples/app/shadertoy/: Main.hs
examples/app/triangle/: Main.hs
examples/guide/: README.md
examples/guide/part-1/: Main.hs  README.md
examples/guide/part-2/: Main.hs  README.md
examples/guide/part-3/: Main.hs  README.md
examples/guide/part-4/: Main.hs  README.md
examples/guide/part-5/: Main.hs  README.md
examples/shaders/: README.md
examples/src/Vpipe/Examples/: Common.hs  Cube.hs  FullscreenShader.hs  Mandelbrot.hs  Offscreen.hs  Particles.hs  Plasma.hs  Rings.hs  Shadertoy.hs
experiments/type-level-descriptor-layout/: PrototypeB.hs
scripts/ci/: run-windows-tests.ps1
tasks/: 00-summary.md  01-scaffolding.md  02-math-and-formats.md  03-expression-edsl.md  04-spirv-codegen.md  05-shader-monad-streams.md  06-vulkan-context.md  07-buffers-memory.md  08-images-samplers.md  09-descriptors-pipeline-layout.md  10-graphics-pipeline.md  11-swapchain-frame-loop.md  12-compute.md  13-windowing.md  14-diagnostics.md  15-examples.md  16-testing-ci.md  17-docs-release.md
vpipe/: CHANGELOG.md  README.md  vpipe.cabal
vpipe-glfw/: CHANGELOG.md  README.md  vpipe-glfw.cabal
vpipe-glfw/src/Vpipe/: GLFW.hs
vpipe-glfw/test/: Main.hs  PublicImports.hs
vpipe/cbits/: vpipe_debug.c
vpipe/docs/decisions/: 0005-descriptor-and-compute-scope.md
vpipe/docs/tutorials/: buffers-textures-and-types.md  coming-from-gpipe.md  coming-from-raw-vulkan.md  compute.md  first-triangle.md
vpipe/public-src/: Vpipe.hs
vpipe/public-src/Vpipe/: Compute.hs  Pipeline.hs
vpipe/src/Vpipe/: Buffer.hs  Context.hs  Error.hs  Expr.hs  Format.hs  Frame.hs  Graphics.hs  Image.hs  Sampler.hs  SpirV.hs  Surface.hs  Swapchain.hs
vpipe/src/Vpipe/Buffer/: Dynamic.hs  Format.hs  Internal.hs  Staging.hs  State.hs
vpipe/src/Vpipe/Buffer/Dynamic/: Internal.hs
vpipe/src/Vpipe/Compute/: Internal.hs
vpipe/src/Vpipe/Compute/Compile/: Internal.hs
vpipe/src/Vpipe/Compute/Frame/: Internal.hs
vpipe/src/Vpipe/Compute/IR/: Internal.hs
vpipe/src/Vpipe/Compute/Pipeline/: Internal.hs
vpipe/src/Vpipe/Compute/Runtime/: Internal.hs
vpipe/src/Vpipe/Context/: Device.hs  Instance.hs  Internal.hs  Queue.hs
vpipe/src/Vpipe/Context/Queue/: Internal.hs
vpipe/src/Vpipe/Descriptor/: Internal.hs
vpipe/src/Vpipe/Diagnostics/Dump/: Internal.hs
vpipe/src/Vpipe/Expr/: Eval.hs  Internal.hs  Reify.hs
vpipe/src/Vpipe/Frame/: Internal.hs
vpipe/src/Vpipe/Frame/Resource/: Internal.hs
vpipe/src/Vpipe/Graphics/Cache/: Internal.hs  Persistence.hs
vpipe/src/Vpipe/Graphics/Compile/: Internal.hs
vpipe/src/Vpipe/Graphics/Frame/: Internal.hs
vpipe/src/Vpipe/Graphics/Pipeline/: Internal.hs
vpipe/src/Vpipe/Graphics/Submission/: Internal.hs
vpipe/src/Vpipe/Image/: Internal.hs  State.hs  Types.hs
vpipe/src/Vpipe/Pipeline/: Internal.hs
vpipe/src/Vpipe/Pipeline/Resource/: Internal.hs
vpipe/src/Vpipe/Resource/: Lifetime.hs
vpipe/src/Vpipe/Sampler/: Internal.hs  Types.hs
vpipe/src/Vpipe/SpirV/: Assembler.hs  Codegen.hs  Generated.hs
vpipe/src/Vpipe/Surface/: Driver.hs  Internal.hs
vpipe/src/Vpipe/Swapchain/: Internal.hs
vpipe/test/: Main.hs
vpipe/test/Vpipe/: BufferTest.hs  ComputeTest.hs  ContextTest.hs  DescriptorTest.hs  DiagnosticsTest.hs  ErrorTest.hs  ExprTest.hs  FormatTest.hs  FrameResourceTest.hs  FrameTest.hs  GraphicsCompileTest.hs  GraphicsSubmissionTest.hs  GraphicsTest.hs  ImageStateTest.hs  ImageTest.hs  InstanceSmokeTest.hs  PipelineTest.hs  SamplerTest.hs  SpirVAssemblerTest.hs  SpirVCodegenTest.hs  SurfaceTest.hs  SwapchainTest.hs  TypeErrorTest.hs
vpipe/test/experiments/: DataReifyPrototype.hs
vpipe/test/golden/format/: reference-aggregate.comp  reference-aggregate.layout
vpipe/test/golden/spirv-codegen/: constant-fragment.words
vpipe/test/type-errors/buffer/: CoerceDynamicElement.hs  CoerceDynamicUsage.hs  CoerceElement.hs  CoerceUsage.hs  DuplicateUsage.hs  EmptyUsage.hs  IndexNotWord32.hs  MissingIndexUsage.hs  ReadWithoutCopySrc.hs  UniformStorage.hs  VertexUniform.hs
vpipe/test/type-errors/compute/: AtomicFloat.hs  CoerceCompiledDispatch.hs  CoerceDispatch.hs  CoerceStorageBuf.hs  UnsupportedStorageElement.hs
vpipe/test/type-errors/expr/: CoerceDerivativeStage.hs  CoerceResourceStages.hs  CoerceValue.hs  VertexDerivative.hs  VertexImplicitSample.hs
vpipe/test/type-errors/format/: MatrixBool.hs  MatrixInt32.hs
vpipe/test/type-errors/frame/: CopyWithoutDestinationUsage.hs  CopyWithoutSourceUsage.hs  DynamicStorageWithoutUsage.hs  DynamicUniformWithoutUsage.hs
vpipe/test/type-errors/image/: CoerceUsage.hs  ColorBindingWithoutTarget.hs  ColorDepthTarget.hs  CubeCoordinates.hs  DepthBindingWithoutTarget.hs  DepthColorTarget.hs  DepthSampleAsColor.hs  DuplicateUsage.hs  EmptyUsage.hs  GenerateMipsWithoutCopyDst.hs  GenerateMipsWithoutCopySrc.hs  MissingCopyDst.hs  ReadWithoutCopySrc.hs  TextureBindingWithoutSampled.hs
vpipe/test/type-errors/pipeline/: CoerceAttachmentKinds.hs  CoerceImageFormats.hs  DrawColorDepthTarget.hs  FlatBool.hs  FlatBoolThenVector.hs  FlatMatrix.hs  MissingInterpolation.hs  MissingUniformUsage.hs  OutputMismatch.hs  OutputVectorWidthMismatch.hs  RawMatrixPushConstant.hs  RawVector.hs  SmoothInt.hs  WrongStage.hs  WrongTopology.hs
(+11 files in other folders)
