cabal-version: 3.12
name: vpipe-examples
version: 0.1.0.0
synopsis: Executable examples for vpipe
description:
  Buildable programs that exercise vpipe's graphics, compute, offscreen, and
  GLFW APIs.
license: MIT
license-file: LICENSE
author: mewhhaha
maintainer: kopatheonlyone@hotmail.com
category: Graphics
build-type: Simple
extra-doc-files: CHANGELOG.md
extra-source-files:
  golden/*.png
  guide/README.md
  guide/part-1/README.md
  guide/part-2/README.md
  guide/part-3/README.md
  guide/part-4/README.md
  guide/part-5/README.md
  shaders/README.md

common example
  ghc-options:
    -Wall
    -Wcompat
    -Wunused-packages
    -threaded
  build-depends:
    base >=4.21 && <4.23,
    JuicyPixels >=3.3.9 && <3.4,
    linear >=1.23.3 && <1.24,
    vpipe >=0.1 && <0.2,
    vpipe-glfw >=0.1 && <0.2
  hs-source-dirs: src
  other-modules: Vpipe.Examples.Common
  default-language: GHC2024

executable triangle
  import: example
  main-is: Main.hs
  hs-source-dirs: app/triangle

executable cube
  import: example
  main-is: Main.hs
  hs-source-dirs: app/cube
  other-modules: Vpipe.Examples.Cube

executable particles
  import: example
  main-is: Main.hs
  hs-source-dirs: app/particles
  other-modules: Vpipe.Examples.Particles
  build-depends:
    vector >=0.13 && <0.14,
    vulkan >=3.26.6 && <3.27

executable offscreen
  import: example
  main-is: Main.hs
  hs-source-dirs: app/offscreen
  other-modules: Vpipe.Examples.Offscreen

executable headless
  import: example
  main-is: Main.hs
  hs-source-dirs: app/headless

executable hardcoded-triangle
  import: example
  main-is: Main.hs
  hs-source-dirs: app/headless

executable regen-goldens
  import: example
  main-is: Main.hs
  hs-source-dirs: app/regen-goldens
  other-modules:
    Vpipe.Examples.Cube
    Vpipe.Examples.FullscreenShader
    Vpipe.Examples.Mandelbrot
    Vpipe.Examples.Offscreen
    Vpipe.Examples.Particles
    Vpipe.Examples.Plasma
    Vpipe.Examples.Rings
    Vpipe.Examples.Shadertoy
  build-depends:
    vector >=0.13 && <0.14,
    vulkan >=3.26.6 && <3.27

executable shadertoy
  import: example
  main-is: Main.hs
  hs-source-dirs: app/shadertoy
  other-modules:
    Vpipe.Examples.FullscreenShader
    Vpipe.Examples.Shadertoy

executable mandelbrot
  import: example
  main-is: Main.hs
  hs-source-dirs: app/mandelbrot
  other-modules:
    Vpipe.Examples.FullscreenShader
    Vpipe.Examples.Mandelbrot

executable plasma
  import: example
  main-is: Main.hs
  hs-source-dirs: app/plasma
  other-modules:
    Vpipe.Examples.FullscreenShader
    Vpipe.Examples.Plasma

executable rings
  import: example
  main-is: Main.hs
  hs-source-dirs: app/rings
  other-modules:
    Vpipe.Examples.FullscreenShader
    Vpipe.Examples.Rings

executable guide-part-1
  import: example
  main-is: Main.hs
  hs-source-dirs: guide/part-1

executable guide-part-2
  import: example
  main-is: Main.hs
  hs-source-dirs: guide/part-2

executable guide-part-3
  import: example
  main-is: Main.hs
  hs-source-dirs: guide/part-3

executable guide-part-4
  import: example
  main-is: Main.hs
  hs-source-dirs: guide/part-4

executable guide-part-5
  import: example
  main-is: Main.hs
  hs-source-dirs: guide/part-5
