cabal-version: 3.12
name: vpipe
version: 0.1.0.0
synopsis: Type-safe Vulkan pipelines and compute for Haskell
description:
  vpipe provides a typed shader EDSL, direct SPIR-V generation, and a managed
  Vulkan 1.3 runtime with stream-oriented graphics and first-class compute.
homepage: https://github.com/mewhhaha/vpipe
bug-reports: https://github.com/mewhhaha/vpipe/issues
license: MIT
license-file: LICENSE
author: mewhhaha
maintainer: kopatheonlyone@hotmail.com
category: Graphics
build-type: Simple
tested-with:
  GHC ==9.12.4
  GHC ==9.14.1
extra-doc-files:
  CHANGELOG.md
  README.md
  docs/assets/vpipe-demo.gif
  docs/decisions/*.md
  docs/tutorials/*.md
extra-source-files:
  test/type-errors/expr/*.hs
  test/type-errors/format/*.hs
  test/type-errors/image/*.hs
  test/type-errors/frame/*.hs
  test/type-errors/buffer/*.hs
  test/type-errors/compute/*.hs
  test/type-errors/pipeline/*.hs
  test/golden/format/*.layout
  test/golden/format/*.comp
  test/golden/pipeline/*.table
  test/golden/spirv-codegen/*.words
  test/golden/spirv-codegen/*.spvasm

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wunused-packages

  -- GHC 9.12 requires `pattern` in import and export lists; GHC 9.14 warns
  -- about that spelling after introducing the replacement `data` namespace.
  if impl(ghc >= 9.14)
    ghc-options: -Wno-pattern-namespace-specifier

library
  import: warnings
  exposed-modules:
    Vpipe
    Vpipe.Compute
    Vpipe.Pipeline
  reexported-modules:
    Vpipe.Buffer,
    Vpipe.Buffer.Dynamic,
    Vpipe.Buffer.Format,
    Vpipe.Context,
    Vpipe.Context.Device,
    Vpipe.Context.Queue,
    Vpipe.Error,
    Vpipe.Expr,
    Vpipe.Format,
    Vpipe.Frame,
    Vpipe.Graphics,
    Vpipe.Image,
    Vpipe.Image.Types,
    Vpipe.Sampler,
    Vpipe.Surface,
    Vpipe.Surface.Driver,
    Vpipe.Swapchain,
    Vpipe.SpirV,
    Vpipe.SpirV.Assembler
  hs-source-dirs: public-src
  ghc-options: -Wno-unused-packages
  build-depends:
    base >=4.21 && <4.23,
    vpipe:internal
  default-language: GHC2024

library internal
  import: warnings
  visibility: private
  exposed-modules:
    Vpipe.Buffer
    Vpipe.Buffer.Dynamic
    Vpipe.Buffer.Dynamic.Internal
    Vpipe.Buffer.Format
    Vpipe.Buffer.State
    Vpipe.Buffer.Staging
    Vpipe.Context
    Vpipe.Context.Internal
    Vpipe.Context.Device
    Vpipe.Context.Queue
    Vpipe.Context.Queue.Internal
    Vpipe.Compute.Internal
    Vpipe.Compute.Frame.Internal
    Vpipe.Descriptor.Internal
    Vpipe.Diagnostics.Dump.Internal
    Vpipe.Error
    Vpipe.Expr
    Vpipe.Expr.Eval
    Vpipe.Expr.Internal
    Vpipe.Expr.Reify
    Vpipe.Format
    Vpipe.Frame
    Vpipe.Frame.Internal
    Vpipe.Frame.Resource.Internal
    Vpipe.Graphics
    Vpipe.Graphics.Frame.Internal
    Vpipe.Graphics.Compile.Internal
    Vpipe.Graphics.Cache.Internal
    Vpipe.Graphics.Cache.Persistence
    Vpipe.Graphics.Submission.Internal
    Vpipe.Image
    Vpipe.Image.State
    Vpipe.Image.Types
    Vpipe.Pipeline.Internal
    Vpipe.Pipeline.Resource.Internal
    Vpipe.Resource.Lifetime
    Vpipe.Sampler
    Vpipe.Sampler.Internal
    Vpipe.Surface
    Vpipe.Surface.Driver
    Vpipe.Swapchain
    Vpipe.Swapchain.Internal
    Vpipe.SpirV
    Vpipe.SpirV.Assembler
    Vpipe.SpirV.Codegen
    Vpipe.SpirV.Generated
  other-modules:
    Vpipe.Buffer.Internal
    Vpipe.Context.Instance
    Vpipe.Compute.Compile.Internal
    Vpipe.Compute.IR.Internal
    Vpipe.Compute.Pipeline.Internal
    Vpipe.Compute.Runtime.Internal
    Vpipe.Graphics.Pipeline.Internal
    Vpipe.Image.Internal
    Vpipe.Sampler.Types
    Vpipe.Surface.Internal
  hs-source-dirs: src
  c-sources: cbits/vpipe_debug.c
  build-depends:
    base >=4.21 && <4.23,
    bytestring >=0.11 && <0.13,
    containers >=0.6 && <0.9,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    linear >=1.23.3 && <1.24,
    mtl >=2.3.1 && <2.4,
    process >=1.6 && <1.7,
    resourcet >=1.3 && <1.4,
    stm >=2.5 && <2.6,
    text >=2.0 && <2.2,
    vector >=0.13 && <0.14,
    vulkan >=3.26.6 && <3.27,
    VulkanMemoryAllocator >=0.11.1 && <0.12,
  default-language: GHC2024

test-suite vpipe-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    DataReifyPrototype
    Vpipe.ContextTest
    Vpipe.ComputeTest
    Vpipe.DescriptorTest
    Vpipe.DiagnosticsTest
    Vpipe.ErrorTest
    Vpipe.FrameResourceTest
    Vpipe.FrameTest
    Vpipe.BufferTest
    Vpipe.ExprTest
    Vpipe.FormatTest
    Vpipe.GraphicsTest
    Vpipe.GraphicsCompileTest
    Vpipe.GraphicsSubmissionTest
    Vpipe.ImageStateTest
    Vpipe.ImageTest
    Vpipe.InstanceSmokeTest
    Vpipe.PipelineTest
    Vpipe.SamplerTest
    Vpipe.SpirVAssemblerTest
    Vpipe.SpirVCodegenTest
    Vpipe.SurfaceTest
    Vpipe.SwapchainTest
    Vpipe.TypeErrorTest
  hs-source-dirs:
    test
    test/experiments
  build-depends:
    base >=4.21 && <4.23,
    bytestring >=0.11 && <0.13,
    containers >=0.6 && <0.9,
    data-reify >=0.6.4 && <0.7,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    linear >=1.23.3 && <1.24,
    process >=1.6 && <1.7,
    QuickCheck >=2.15 && <2.19,
    tasty >=1.5.3 && <1.6,
    tasty-golden >=2.3.6 && <2.4,
    tasty-hunit >=0.10.2 && <0.11,
    tasty-quickcheck >=0.11.1 && <0.12,
    vector >=0.13 && <0.14,
    vpipe,
    vpipe:internal,
    vulkan >=3.26.6 && <3.27
  mixins:
    vpipe:internal
      ( Vpipe.Buffer.State,
        Vpipe.Buffer.Dynamic.Internal,
        Vpipe.Buffer.Staging,
        Vpipe.Compute.Frame.Internal,
        Vpipe.Context.Internal,
        Vpipe.Context.Queue.Internal,
        Vpipe.Descriptor.Internal,
        Vpipe.Diagnostics.Dump.Internal,
        Vpipe.Expr.Eval,
        Vpipe.Expr.Internal,
        Vpipe.Expr.Reify,
        Vpipe.Frame.Internal,
        Vpipe.Frame.Resource.Internal,
        Vpipe.Graphics.Frame.Internal,
        Vpipe.Graphics.Compile.Internal,
        Vpipe.Graphics.Cache.Internal,
        Vpipe.Graphics.Cache.Persistence,
        Vpipe.Graphics.Submission.Internal,
        Vpipe.Image.State,
        Vpipe.Compute.Internal,
        Vpipe.Pipeline.Internal,
        Vpipe.Pipeline.Resource.Internal,
        Vpipe.Resource.Lifetime,
        Vpipe.Sampler.Internal,
        Vpipe.Swapchain.Internal,
        Vpipe.SpirV.Codegen,
        Vpipe.SpirV.Generated
      )
  default-language: GHC2024

source-repository head
  type: git
  location: https://github.com/mewhhaha/vpipe.git
